add authorization and authentication with Identity
Co-authored-by: Alex Adamovic <alexadamovic@users.noreply.github.com>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     <h5>@Html.ActionLink("Add new tag", "Create", "Tags")</h5>
   </div>
 </div>
-<div class="row text-center">
+<div class="text-center search-box">
   <h4>Search Recipes By Ingredient</h4>
   <p><i>(must be an exact match)</i></p>
 
