--- a/RecipeBox/Views/Shared/Footer.cshtml
+++ b/RecipeBox/Views/Shared/Footer.cshtml
@@ -1,7 +1,7 @@
 <div id="footer">
   <footer class="text-center text-white" style="background-color: #f1f1f1;">
     <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      <p>@Html.ActionLink("Home", "Index", "Home")</p>
+      <p>@Html.ActionLink("All Recipes", "Index", "Home") | @Html.ActionLink("My Recipes", "Index", "Recipes") | @Html.ActionLink("Account / Login", "Index", "Account")</p>
     </div>
   </footer>
 </div>
