--- a/RecipeBox/Views/Tags/Details.cshtml
+++ b/RecipeBox/Views/Tags/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Tags</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.TagName): @Html.DisplayFor(model => model.TagName)</h3>
+<h3>@Html.DisplayFor(model => model.TagName)</h3>
 
 @if(@Model.JoinEntities.Count == 0)
 {
@@ -24,5 +24,4 @@ else
 }
 
 
-<p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.TagId })</p>
-<p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.TagId })</p>
+<p>@Html.ActionLink("Edit Tag", "Edit", new { id = Model.TagId }) | @Html.ActionLink("Delete Tag", "Delete", new { id = Model.TagId })</p>
