--- a/RecipeBox/Views/Ratings/Create.cshtml
+++ b/RecipeBox/Views/Ratings/Create.cshtml
@@ -9,5 +9,5 @@
 {
   @Html.Label("Add a Star Rating")
   @Html.TextBoxFor(model => model.Stars)
-  <input type="submit" value="Add new recipe!" />
+  <input type="submit" value="Add new recipe!" class="btn btn-outline-dark" />
 }
