--- a/RecipeBox/Views/Recipes/Create.cshtml
+++ b/RecipeBox/Views/Recipes/Create.cshtml
@@ -13,5 +13,5 @@
   @Html.TextAreaFor(model => model.Ingredients)
   @Html.Label("Add your instructions")
   @Html.TextAreaFor(model => model.Instructions)
-  <input type="submit" value="Add new recipe!" />
+  <input type="submit" value="Add new recipe!" class="btn btn-outline-dark" />
 }
