--- a/RecipeBox/Views/Recipes/Edit.cshtml
+++ b/RecipeBox/Views/Recipes/Edit.cshtml
@@ -21,5 +21,5 @@
   @Html.LabelFor(model => model.Instructions)
   @Html.EditorFor(model => model.Instructions)
 
-  <input type="submit" value="Save" />
+  <input type="submit" value="Save" class="btn btn-outline-dark" />
 }
