--- a/RecipeBox/Views/Recipes/AddTag.cshtml
+++ b/RecipeBox/Views/Recipes/AddTag.cshtml
@@ -15,5 +15,5 @@
   @Html.Label("Select tag")
   @Html.DropDownList("TagId")
 
-  <input type="submit" value="Save" />
+  <input type="submit" value="Save" class="btn btn-outline-dark" />
 }
