--- a/RecipeBox/Views/Recipes/Delete.cshtml
+++ b/RecipeBox/Views/Recipes/Delete.cshtml
@@ -9,5 +9,5 @@
 @Html.DisplayFor(model => model.RecipeName)
 @using (Html.BeginForm())
 {
-  <input type="submit" value="Delete" />
+  <input type="submit" value="Delete" class="btn btn-outline-dark" />
 }
