--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -22,7 +22,7 @@
     @Html.Label("Select rating")
     @Html.DropDownList("RatingId")
 
-    <input type="submit" value="Save" />
+    <input type="submit" value="Save" class="btn btn-outline-dark" />
 }
 
 @if(@Model.JoinEntities.Count == 0)
