--- a/RecipeBox/Views/Tags/Create.cshtml
+++ b/RecipeBox/Views/Tags/Create.cshtml
@@ -9,5 +9,5 @@
 {
   @Html.LabelFor(model => model.TagName)
   @Html.TextBoxFor(model => model.TagName)
-  <input type="submit" value="Add new tag" />
+  <input type="submit" value="Add new tag" class="btn btn-outline-dark" />
 }
