--- a/RecipeBox/Views/Tags/Delete.cshtml
+++ b/RecipeBox/Views/Tags/Delete.cshtml
@@ -9,6 +9,6 @@
 @Html.DisplayNameFor(model => model.TagName): @Html.DisplayFor(model => model.TagName)
 @using (Html.BeginForm())
 {
-  <input type="submit" value="Delete" />
+  <input type="submit" value="Delete" class="btn btn-outline-dark" />
 }
 @Html.ActionLink("Back to List", "Index", "Home")
