--- a/RecipeBox/Views/Tags/Edit.cshtml
+++ b/RecipeBox/Views/Tags/Edit.cshtml
@@ -15,6 +15,6 @@
   @Html.LabelFor(model => model.TagName)
   @Html.EditorFor(model => model.TagName)
 
-  <input type="submit" value="Save" />
+  <input type="submit" value="Save" class="btn btn-outline-dark" />
 }
 <p>@Html.ActionLink("Back to list", "Index", "Home")</p>
