--- a/RecipeBox/wwwroot/css/styles.css
+++ b/RecipeBox/wwwroot/css/styles.css
@@ -2,6 +2,7 @@
 
 body {
   background-color: rgb(253, 177, 142);
+  font-family: 'Nova Slim';
 }
 
 header {
@@ -44,4 +45,22 @@ header {
   border-radius: 20px;
   margin-top: 5%;
   padding: 1.5%;
+}
+
+.tag-box {
+  border: solid;
+  border-radius: 20px;
+  margin-top: 1%;
+  margin-left: 2%;
+  margin-right: 1%;
+  padding: 1%;
+}
+
+.recipe-container {
+  border: solid;
+  border-radius: 20px;
+  margin-top: 1%;
+  margin-left: 1%;
+  margin-right: 2%;
+  padding: 1%;
 }
