--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 @using RecipeBox.Models;
 @model RecipeBox.Models.RecipeBoxContext
 
-<div class="row text-center">
-  <div class="col-9 recipe-container">
+<div class="row justify-content-md-center text-center">
+  <div class="col-8 recipe-container">
     <h2>Recipes</h2>
 
     @if (@Model.Recipes.ToList().Count == 0)
@@ -22,7 +22,7 @@
     <h5>@Html.ActionLink("Add new recipe", "Create", "Recipes")</h5>
   </div>
 
-  <div class="col-2 tag-box">
+  <div class="col-3 col-sm tag-box">
     <h2>Tags</h2>
 
     @if (@Model.Tags.ToList().Count == 0)
